ingress/ingress-gateway/templates/leenet-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: leenet-gateway
  namespace: neon-ingress
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "leenet.link"
    - "*.leenet.link"
    port:
      number: 443
      name: leenet-link-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: leenet-link-route53-dns-tls
  - hosts:
    - "leenet.lol"
    - "*.leenet.lol"
    port:
      number: 443
      name: leenet-lol-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: leenet-lol-route53-dns-tls
  - hosts:
    - "charlierlee.com"
    - "*.charlierlee.com"
    port:
      number: 443
      name: charlierlee-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: charlierlee-com-route53-dns-tls
  - hosts:
    - "plhhoa.link"
    - "*.plhhoa.link"
    port:
      number: 443
      name: plhhoa-link-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: plhhoa-link-route53-dns-tls
  - hosts:
    - "zambonigirl.com"
    - "*.zambonigirl.com"
    port:
      number: 443
      name: zambonigirl-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: zambonigirl-com-route53-dns-tls
  - hosts:
    - "paintedravendesign.com"
    - "*.paintedravendesign.com"
    port:
      number: 443
      name: paintedravendesign-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: paintedravendesign-com-route53-dns-tls
