ingress/ingress-gateway/templates/service-mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: www.amazon.com
  namespace: neon-ingress
spec:
  host: "www.amazon.com"
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: www.amazon.com
  namespace: neon-ingress
spec:
  hosts:
    - www.amazon.com
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
